# XLIS

./: .gitignore  .gitmodules  Changelog.md  README.md
CSharp-Cpp-CppSharp/: .gitignore  README.md
CSharp-Cpp-CppSharp/CSharpProjects/: CSharpProjects.sln  CSharpProjects.userprefs
CSharp-Cpp-CppSharp/CppLibraryProject/: CMakeLists.txt  Foo.hpp
CSharp-Cpp-Interop/: .gitignore  README.md
CSharp-Cpp-Interop/CLibraryProject/: CFooBar.cpp  CMakeLists.txt
CSharp-Cpp-Interop/CSharpConsoleProject/: CSharpConsoleProject.sln  CSharpConsoleProject.userprefs
CSharp-Cpp-Interop/CppConsoleProject/: CMakeLists.txt  FooBar.cpp
CSharp-Cpp-Interop/CppLibraryProject/: Bar.cpp  Bar.hpp  Foo.cpp  Foo.hpp
CSharp-Cpp-SWIG/: README.md
CSharp-Cpp-SWIG/CSharpConsoleProject/: CSharpConsoleProject.sln  CSharpConsoleProject.userprefs
CSharp-Cpp-SWIG/CppLibraryProject/: CMakeLists.txt  IBar.hpp
CSharp-Cpp-SWIG/SwigLibraryProject/: CMakeLists.txt  SwigFooBar.i
Cpp-CSharp-Blackmire/: Readme.md
Cpp-CSharp-Blackmire/CSharpLibrary/: .gitignore  Bar.cs  Foo.cs  IBar.cs
Cpp-CSharp-Blackmire/CppConsoleProject/: CMakeLists.txt  Foo.cpp  Foo.hpp  FooBar.cpp
Cpp-CSharp-SharpCpp/: Readme.md
Cpp-CSharp-SharpCpp/CppConsoleProject/: Bar.cpp  Bar.hpp  CMakeLists.txt  Foo.cpp  Foo.hpp  IBar.cpp  IBar.hpp
Cpp-Cross-Platform/: Readme.md  compile.sh
Cpp-Cross-Platform/CSharpProjects/: CSharpProjects.sln  CSharpProjects.userprefs  (+1 more)
Cpp-Cross-Platform/CppLibrary/: CMakeLists.txt  IBar.cpp  IBar.hpp  SwigFooBar.i
Cpp-Sharp-Blackmire/: Readme.md
ObjC-Swift-Interop/: Readme.md
(+81 files in other folders)
